Revision history for Linux-Statm-Tiny

{{$NEXT}}
  [Bug Fixes]
  - Fix pid detection in forks (aidy)

  [Tests]
  - Updated namespace tests and added other POD tests (ether)

  [Documentation]
  - Change README to markdown format.

  [Other Changes]
  - Remove .travis.yml from git repo.

  - Define the module version normally, which works better with buildtools.

0.0505    2015-06-23 18:05:22+01:00 Europe/London
  [Other Changes]
  - Only run tests on Linux machines

  - Added Travis-CI configuration to repo

0.0504    2015-05-25 14:35:16+01:00 Europe/London
  [Other Changes]
  - Use namespace::autoclean, as namespace::sweep is deprecated (GitHub #8).

  - Added namespace tests.

  - Added POD tests.

0.0503    2015-05-06 14:18:35+01:00 Europe/London
  [Enhancements]
  - Added error reason when getconf fails.

0.0502    2015-05-05 17:20:25+01:00 Europe/London
  [Enhancements]
  - Page size is only read once when the class is loaded.

0.0501    2015-05-05 16:58:38+01:00 Europe/London
  [Bug Fixes]
  - Die when getting the page size fails.

0.0500    2015-04-09 08:57:25+01:00 Europe/London
  [Enhancements]
  - Added mb/kb/etc aliases to vsz and rss methods.

0.0400    2015-03-27 13:53:03+00:00 Europe/London
  [Documentation]
  - Improved POD so that it's clear that vsz and rss are aliases.

  [Enhancements]
  - vsz and rss and *_pages attributes are explicitly defined as
    aliases.

  - dist.ini modified to use AutoPrereqs and add better
    metadata to the distribution.

  - Removed use of common::sense in the tests.

  - Added mb aliases, e.g. "size_mb".

  - The kb and mb aliases use the ceil function to round values up.

  - Added refresh method to refresh values.

  [Other Changes]
  - Added tests for pages alias.

0.0300    2015-01-12 11:26:08+00:00 Europe/London
  [Documentation]
  - Fixed typo in POD markup.

  - Bumped copyright year.

  [Enhancements]
  - Added vsz as alias for size.

  - Used proper aliases instead of wrapper methods.
