@@ -1,2 +1,4 @@
 Robert Rothenberg <rrwo@cpan.org> <rrwo@thermeon.com>
+Robert Rothenberg <rrwo@cpan.org> <robrwo@gmail.com>
+Robert Rothenberg <rrwo@cpan.org> <robrwo+github@gmail.com>
 Adrian Lai <aidy@cpan.org> <aidy@thermeon.com>
