@@ -21,6 +21,8 @@ repo = git://github.com/robrwo/Linux-Statm-Tiny.git
 copy = Changes
 copy = README.md
 
+[PodWeaver]
+
 [ManifestSkip]
 [MetaJSON]
 [ReadmeAnyFromPod]
@@ -38,5 +40,7 @@ allow_dirty = dist.ini
 allow_dirty = .travis.yml
 push_to = origin master:master
 
+[Git::Contributors]
+:version = 0.019
 [Test::CleanNamespaces]
 [PodSyntaxTests]
